[gd_scene load_steps=5 format=3 uid="uid://dllefuwsvhtki"]

[ext_resource type="ArrayMesh" uid="uid://b1rw2y1v0dja2" path="res://Room/Model/Room.obj" id="1_i7vs8"]
[ext_resource type="Script" uid="uid://dq0fc34dhj8mn" path="res://Teleporter/teleporter.gd" id="2_vdjvi"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_i7vs8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0j4tc"]
size = Vector3(3, 3, 3)

[node name="Room" type="StaticBody3D"]

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, 0)
mesh = ExtResource("1_i7vs8")
metadata/_edit_lock_ = true

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("WorldBoundaryShape3D_i7vs8")

[node name="Lights" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="UL" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 6, 4, -6)

[node name="L" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, -6)

[node name="BL" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 4, -6)

[node name="UR" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 6, 4, 6)

[node name="R" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 6)

[node name="BR" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 4, 6)

[node name="U" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 6, 4, 0)

[node name="B" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 4, 0)

[node name="Teleporter" type="Node3D" parent="."]
script = ExtResource("2_vdjvi")
left_translation = Vector3(0, 0, -17)
right_translation = Vector3(0, 0, 17)

[node name="TeleporterArea" type="Area3D" parent="Teleporter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2.5, 0)

[node name="Collision" type="CollisionShape3D" parent="Teleporter/TeleporterArea"]
shape = SubResource("BoxShape3D_0j4tc")

[node name="TriggerAreaLeft" type="Area3D" parent="Teleporter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.5, 6)

[node name="Collision" type="CollisionShape3D" parent="Teleporter/TriggerAreaLeft"]
shape = SubResource("BoxShape3D_0j4tc")

[node name="TriggerAreaRight" type="Area3D" parent="Teleporter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.5, -6)

[node name="Collision" type="CollisionShape3D" parent="Teleporter/TriggerAreaRight"]
shape = SubResource("BoxShape3D_0j4tc")

[connection signal="body_entered" from="Teleporter/TeleporterArea" to="Teleporter" method="_on_tp_i"]
[connection signal="body_exited" from="Teleporter/TeleporterArea" to="Teleporter" method="_on_tp_o"]
[connection signal="body_entered" from="Teleporter/TriggerAreaLeft" to="Teleporter" method="_on_l_i"]
[connection signal="body_exited" from="Teleporter/TriggerAreaLeft" to="Teleporter" method="_on_l_o"]
[connection signal="body_entered" from="Teleporter/TriggerAreaRight" to="Teleporter" method="_on_r_i"]
[connection signal="body_exited" from="Teleporter/TriggerAreaRight" to="Teleporter" method="_on_r_o"]
